# atelium

./: .gitignore  OSS-PRINCIPLES.md  README.md  docker-compose.yml  pyproject.toml
architecture/: core-runtime-spec.md
docs/: OSS-PRINCIPLES.md
docs/architecture/: agent-manifest-spec-v1.md  cli-spec.md  registry-api-spec.md
examples/: review-pipeline.yaml  sentiment-agent.yaml
literature/: related-work.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
papers/: paper1-framework-analysis.md  paper2-emergent-routing-v2.md  paper2-emergent-routing.md
patterns/: patterns.md
proposal/: chapter-implementation.md  thesis-proposal.md
src/atelium/: config.py
src/atelium/api/: deps.py  main.py
src/atelium/api/routers/: __init__.py  agents.py  health.py  hitl.py  pipelines.py
src/atelium/cli/: main.py
src/atelium/cli/commands/: agent_cmd.py  infra_cmd.py  pipeline_cmd.py  server_cmd.py
src/atelium/core/: models.py  router.py  saga.py  self_healing.py  state.py  topology.py  transition_guard.py
src/atelium/infra/: __init__.py  nats.py  ollama.py  postgres.py  redis.py
src/atelium/manifest/: loader.py  schema.py  validator.py
src/atelium/observability/: __init__.py  langfuse.py  metrics.py  tracing.py
src/atelium/runtime/: __init__.py  executor.py  graph.py  mcp.py  registry.py
tests/: conftest.py
tests/unit/: test_manifest.py  test_router.py  test_saga.py  test_self_healing.py  test_transition_guard.py
