[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atelium"
version = "0.1.0"
description = "Fault-tolerant multi-agent LLM orchestration platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
    # Agent runtime
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",

    # LLM serving
    "ollama>=0.3.0",

    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",

    # Infrastructure
    "redis[hiredis]>=5.0.0",
    "asyncpg>=0.29.0",
    "nats-py>=2.7.0",

    # Manifest / validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.0",
    "semver>=3.0.0",
    "simpleeval>=0.9.13",

    # Observability
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "langfuse>=2.40.0",
    "prometheus-fastapi-instrumentator>=7.0.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",

    # Utilities
    "numpy>=1.26.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "fakeredis>=2.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
atelium = "atelium.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/atelium"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
